# brainfuckery

./: README.md
dart/: pubspec.yaml
haskell/: Main.hs
javascript/: main.js
python/: main.py  pyproject.toml
